[gd_scene load_steps=3 format=3 uid="uid://cteuo2irwv522"]

[ext_resource type="Script" path="res://Ingame/game_objects/player/parts/drop_spawner_sensor/drop_spawner_sensor.gd" id="1_4xx0h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jck7"]
size = Vector2(16, 160)

[node name="drop_spawner_sensor" type="Area2D"]
collision_layer = 2048
collision_mask = 2048
monitorable = false
script = ExtResource("1_4xx0h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -80)
shape = SubResource("RectangleShape2D_0jck7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
